RESOLVED FIXED 170832
WebAssembly: fix windows build
https://bugs.webkit.org/show_bug.cgi?id=170832
Summary WebAssembly: fix windows build
JF Bastien
Reported 2017-04-13 15:33:05 PDT
Bug #170628 broke it.
Attachments
patch (1.60 KB, patch)
2017-04-13 15:36 PDT, JF Bastien
jfbastien: commit-queue-
patch (1.56 KB, patch)
2017-04-13 15:41 PDT, JF Bastien
jfbastien: review-
jfbastien: commit-queue-
patch (1.73 KB, patch)
2017-04-13 15:43 PDT, JF Bastien
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (898.46 KB, application/zip)
2017-04-13 17:26 PDT, Build Bot
no flags
JF Bastien
Comment 1 2017-04-13 15:36:09 PDT
JF Bastien
Comment 2 2017-04-13 15:39:31 PDT
Comment on attachment 307035 [details] patch Oops, deleted too much.
JF Bastien
Comment 3 2017-04-13 15:41:05 PDT
Created attachment 307038 [details] patch Fix the fix.
JF Bastien
Comment 4 2017-04-13 15:41:40 PDT
Comment on attachment 307038 [details] patch Actually this doesn't work either. Looks like the Windows build includes isIOS but others don't.
JF Bastien
Comment 5 2017-04-13 15:43:51 PDT
Created attachment 307039 [details] patch This one should work. The Windows build #if include the x86 assembler, which is why it was getting the declaration when others weren't.
Mark Lam
Comment 6 2017-04-13 15:45:37 PDT
Comment on attachment 307039 [details] patch r=me if EWS bots are happy.
Ryan Haddad
Comment 7 2017-04-13 16:07:07 PDT
(In reply to Mark Lam from comment #6) > Comment on attachment 307039 [details] > patch > > r=me if EWS bots are happy. Sadly, win-ews is offline at the moment.
Mark Lam
Comment 8 2017-04-13 16:26:23 PDT
(In reply to Ryan Haddad from comment #7) > (In reply to Mark Lam from comment #6) > > Comment on attachment 307039 [details] > > patch > > > > r=me if EWS bots are happy. > > Sadly, win-ews is offline at the moment. I'd be happy if the remaining bots are all happy.
Build Bot
Comment 9 2017-04-13 17:26:39 PDT
Comment on attachment 307039 [details] patch Attachment 307039 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3531185 New failing tests: webrtc/multi-video.html
Build Bot
Comment 10 2017-04-13 17:26:40 PDT
Created attachment 307056 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
JF Bastien
Comment 11 2017-04-13 21:18:05 PDT
Comment on attachment 307039 [details] patch I think bots are wrong about the multi-video crash.
WebKit Commit Bot
Comment 12 2017-04-13 21:46:59 PDT
Comment on attachment 307039 [details] patch Clearing flags on attachment: 307039 Committed r215356: <http://trac.webkit.org/changeset/215356>
WebKit Commit Bot
Comment 13 2017-04-13 21:47:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.