WebAssembly: fix windows build https://bugs.webkit.org/show_bug.cgi?id=170832

Reviewed by Mark Lam.

My previous patch re-declared isIOS which AssemblerCommon.h
already provided, and which was already included by Options.cpp.

* runtime/Options.cpp:


Canonical link: https://commits.webkit.org/187773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215356 268f45cc-cd09-0410-ab3c-d52691b4dbfc